testsuite/tests/quotation/eval/type_variable.compilers.reference
File "type_variable.ml", line 11, characters 40-41:
11 | let variable_eval (type a) () = [%eval: a]
                                             ^
Error: Identifier "a" is used at File "type_variable.ml", line 11, characters 40-41,
       inside a quotation (<[ ... ]>);
       it is introduced at File "type_variable.ml", line 11, characters 24-25,
       outside any quotations.
